--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
 		"react-native-tab-navigator": "^0.3.3",
+		"react-native-vector-icons": "^4.2.0",
 		"react-navigation": "^1.0.0-beta.11"
 	},
 	"devDependencies": {
