Renamed app to 'TourGuide'

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "BluffometerReactNative",
-  "displayName": "BluffometerReactNative"
+  "name": "TourGuide",
+  "displayName": "Tour Guide"
 }
