--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,7 +94,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.bluffometerreactnative"
+        applicationId "com.tourguide"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
