--- a/ios/TourGuide.xcodeproj/xcshareddata/xcschemes/TourGuide.xcscheme
+++ b/ios/TourGuide.xcodeproj/xcshareddata/xcschemes/TourGuide.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "BluffometerReactNative.app"
-               BlueprintName = "BluffometerReactNative"
-               ReferencedContainer = "container:BluffometerReactNative.xcodeproj">
+               BuildableName = "TourGuide.app"
+               BlueprintName = "TourGuide"
+               ReferencedContainer = "container:TourGuide.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "BluffometerReactNativeTests.xctest"
-               BlueprintName = "BluffometerReactNativeTests"
-               ReferencedContainer = "container:BluffometerReactNative.xcodeproj">
+               BuildableName = "TourGuideTests.xctest"
+               BlueprintName = "TourGuideTests"
+               ReferencedContainer = "container:TourGuide.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "BluffometerReactNativeTests.xctest"
-               BlueprintName = "BluffometerReactNativeTests"
-               ReferencedContainer = "container:BluffometerReactNative.xcodeproj">
+               BuildableName = "TourGuideTests.xctest"
+               BlueprintName = "TourGuideTests"
+               ReferencedContainer = "container:TourGuide.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BluffometerReactNative.app"
-            BlueprintName = "BluffometerReactNative"
-            ReferencedContainer = "container:BluffometerReactNative.xcodeproj">
+            BuildableName = "TourGuide.app"
+            BlueprintName = "TourGuide"
+            ReferencedContainer = "container:TourGuide.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BluffometerReactNative.app"
-            BlueprintName = "BluffometerReactNative"
-            ReferencedContainer = "container:BluffometerReactNative.xcodeproj">
+            BuildableName = "TourGuide.app"
+            BlueprintName = "TourGuide"
+            ReferencedContainer = "container:TourGuide.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "BluffometerReactNative.app"
-            BlueprintName = "BluffometerReactNative"
-            ReferencedContainer = "container:BluffometerReactNative.xcodeproj">
+            BuildableName = "TourGuide.app"
+            BlueprintName = "TourGuide"
+            ReferencedContainer = "container:TourGuide.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
